import { newSpecPage } from '@stencil/core/testing';
import { OntarioStepIndicator } from '../ontario-step-indicator';

describe('ontario-step-indicator', () => {
	let warnSpy: jest.SpyInstance;

	beforeEach(() => {
		warnSpy = jest.spyOn(console, 'warn').mockImplementation(() => undefined);
	});

	afterEach(() => {
		warnSpy.mockRestore();
	});

	describe('snapshots', () => {
		it('renders', async () => {
			const page = await newSpecPage({
				components: [OntarioStepIndicator],
				html: `<ontario-step-indicator></ontario-step-indicator>`,
			});

			expect(page.root).toMatchSnapshot();
		});

		it('renders the expected step output shape', async () => {
			const page = await newSpecPage({
				components: [OntarioStepIndicator],
				html: `<ontario-step-indicator current-step="2" number-of-steps="5"></ontario-step-indicator>`,
			});

			expect(page.root).toMatchSnapshot();
		});

		it('renders the expected percentage and back-link output shape', async () => {
			const page = await newSpecPage({
				components: [OntarioStepIndicator],
				html: `<ontario-step-indicator show-back-button="true" back-button-url="https://designsystem.ontario.ca/" percentage-complete="70"></ontario-step-indicator>`,
			});

			expect(page.root).toMatchSnapshot();
		});
	});

	describe('rendering modes', () => {
		describe('step mode', () => {
			it('renders step mode by default', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator></ontario-step-indicator>`,
				});

				expect(page.root?.shadowRoot?.querySelector('.ontario-h4')?.textContent?.replace(/\s+/g, ' ').trim()).toBe(
					'Step ? of ?',
				);
				expect(warnSpy).toHaveBeenCalledTimes(0);
			});

			it('renders step mode with a placeholder and warns when currentStep is missing', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator number-of-steps="5"></ontario-step-indicator>`,
				});

				expect(page.root?.shadowRoot?.querySelector('.ontario-h4')?.textContent?.replace(/\s+/g, ' ').trim()).toBe(
					'Step ? of 5',
				);
				expect(warnSpy).toHaveBeenCalledTimes(1);
			});

			it('renders step mode with a placeholder and warns when numberOfSteps is missing', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator current-step="2"></ontario-step-indicator>`,
				});

				expect(page.root?.shadowRoot?.querySelector('.ontario-h4')?.textContent?.replace(/\s+/g, ' ').trim()).toBe(
					'Step 2 of ?',
				);
				expect(warnSpy).toHaveBeenCalledTimes(1);
			});
		});

		describe('percentage mode', () => {
			it('renders percentage mode when percentageComplete is defined', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator percentage-complete="70"></ontario-step-indicator>`,
				});

				expect(page.root?.shadowRoot?.querySelector('.ontario-h4')?.textContent?.replace(/\s+/g, ' ').trim()).toBe(
					'70% complete',
				);
			});

			it('renders percentage mode when percentageComplete is 0', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator percentage-complete="0"></ontario-step-indicator>`,
				});

				expect(page.root?.shadowRoot?.querySelector('.ontario-h4')?.textContent?.replace(/\s+/g, ' ').trim()).toBe(
					'0% complete',
				);
			});
		});

		describe('mixed props', () => {
			it('warns and prefers percentage mode when percentage and step props are mixed', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator percentage-complete="70" current-step="2" number-of-steps="5"></ontario-step-indicator>`,
				});

				expect(page.root?.shadowRoot?.querySelector('.ontario-h4')?.textContent?.replace(/\s+/g, ' ').trim()).toBe(
					'70% complete',
				);
				expect(warnSpy).toHaveBeenCalledTimes(1);
			});
		});
	});

	describe('back button rendering', () => {
		describe('link mode', () => {
			it('renders a back link when backButtonUrl is provided', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator show-back-button="true" back-button-url="https://designsystem.ontario.ca/" current-step="2" number-of-steps="5"></ontario-step-indicator>`,
				});

				const link = page.root?.shadowRoot?.querySelector('a');
				const button = page.root?.shadowRoot?.querySelector('button');

				expect(link).not.toBeNull();
				expect(link?.getAttribute('href')).toBe('https://designsystem.ontario.ca/');
				expect(button).toBeNull();
				expect(warnSpy).toHaveBeenCalledTimes(0);
			});
		});

		describe('button mode', () => {
			it('renders a back button when only customOnClick is provided', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator current-step="2" number-of-steps="5"></ontario-step-indicator>`,
				});

				page.rootInstance.showBackButton = true;
				page.rootInstance.customOnClick = jest.fn();
				page.rootInstance.backButtonUrl = undefined;
				warnSpy.mockClear();
				page.rootInstance.componentWillLoad();
				await page.waitForChanges();

				const link = page.root?.shadowRoot?.querySelector('a');
				const button = page.root?.shadowRoot?.querySelector('button');

				expect(button).not.toBeNull();
				expect(link).toBeNull();
				expect(warnSpy).toHaveBeenCalledTimes(0);
			});

			it('warns when rendering a back button without backButtonUrl or customOnClick', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator show-back-button="true" current-step="2" number-of-steps="5"></ontario-step-indicator>`,
				});

				expect(page.root?.shadowRoot?.querySelector('button')).not.toBeNull();
				expect(warnSpy).toHaveBeenCalledTimes(1);
			});
		});

		describe('conflicting props', () => {
			it('warns and prefers the anchor when backButtonUrl and customOnClick are both provided', async () => {
				const page = await newSpecPage({
					components: [OntarioStepIndicator],
					html: `<ontario-step-indicator show-back-button="true" back-button-url="https://designsystem.ontario.ca/" current-step="2" number-of-steps="5"></ontario-step-indicator>`,
				});

				page.rootInstance.customOnClick = jest.fn();
				warnSpy.mockClear();
				page.rootInstance.componentWillLoad();
				await page.waitForChanges();

				expect(page.root?.shadowRoot?.querySelector('a')).not.toBeNull();
				expect(page.root?.shadowRoot?.querySelector('button')).toBeNull();
				expect(warnSpy).toHaveBeenCalledTimes(1);
			});
		});
	});
});
